# ProjetGLCS

./: CMakeLists.txt  README.md  file.sh  ma partie  rapport_projet.odt  simpleheat.cpp
Projet-GLCS-2020-2021/: CMakeLists.txt  config.ini  default.conf  default.ini  simpleheat.cpp
Projet-GLCS-2020-2021/baselib/include/: configuration.hpp
Projet-GLCS-2020-2021/cliparser/include/: cmdparse.hpp
Projet-GLCS-2020-2021/cliparser/src/: cmdparse.cpp
Projet-GLCS-2020-2021/posttreat/: CMakeLists.txt
Projet-GLCS-2020-2021/posttreat/src/: dataavg.cpp
Projet-GLCS-2020-2021/simpleui/: CMakeLists.txt
Projet-GLCS-2020-2021/simpleui/include/: screenprinter.hpp
Projet-GLCS-2020-2021/simpleui/src/: screenprinter.cpp
ProjetGLCS-main/: simpleheat.cpp
ProjetGLCS-main/cliparser/: CMakeLists.txt
ProjetGLCS-main/cliparser/include/: cmdparse.hpp
ProjetGLCS-main/posttreat/include/: dataavg.hpp
ProjetGLCS-main/simpleui/: CMakeLists.txt
ProjetGLCS-main/writing_datahdf5/include/: writing_hdf5.hpp
baselib/include/: configuration.hpp  coord2d.hpp  datareduce.hpp
posttreat/: CMakeLists.txt
posttreat/include/: resulthdf5.hpp
posttreat/src/: dataavg.cpp  resulthdf5.cpp
simpleui/: CMakeLists.txt
simpleui/include/: commandlineconfig.hpp  screenprinter.hpp
simpleui/src/: commandlineconfig.cpp  screenprinter.cpp
writing_datahdf5/: CMakeLists.txt
writing_datahdf5/include/: commandlineconfig.hpp
writing_datahdf5/src/: writing_hdf5.cpp
